<resources>
    <string name="app_name">DxracerCRM</string>
    <string name="username_et_hint">请输入用户名</string>
    <string name="password_et_hint">请输入密码</string>
    <string name="login_btn_text">登   录</string>
    <string name="title">DXRacerSMS</string>
    <string name="progressDialog_login">正在登录...</string>
    <string name="clue_number">线索编号:</string>
    <string name="edit">编辑</string>
    <string name="Customerinformation">客户信息</string>
    <string name="news">消息</string>
    <string name="maillist">通讯录</string>
    <string name="workbench">工作台</string>
    <string name="statistics">统计</string>
    <string name="more">更多</string>
    <string name="add_customers">录线索</string>
    <string name="Write">写跟进</string>
    <string name="buildingtask">建任务</string>
    <string name="writeorder">录订单</string>
    <string name="writerjournal">写日志</string>
    <string name="cuemanagement">线索管理</string>
    <string name="publiccue">公有线索</string>
    <string name="privatecue">私有线索</string>

    <string name="Sampletobeconfirmed">样品确认</string>
    <string name="Schemetobeconfirmed">方案确认</string>
    <string name="Quotationtobeconfirmed">报价确认</string>
    <string name="Contracttobeconfirmed">合同生成</string>
    <string name="Opportunityhasbeencancelled">作废机会</string>
    <string name="Allopportunities">所有机会</string>

    <string name="ht_ysc">合同已生成</string>
    <string name="ht_yyj">合同已邮寄</string>
    <string name="ht_yhq">合同已回签</string>
    <string name="ht_zxz">合同执行中</string>
    <string name="ht_zxw">合同执行完</string>
    <string name="ht_yzf">合同已作废</string>

</resources>
