<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@drawable/shape_gradient"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:padding="20dp"
                android:layout_weight="2"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/profile_image"
                app:civ_border_width="1dp"
                app:civ_circle_background_color="@color/white"
                app:civ_border_color="@color/white"
                />

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/edshap"

                >
                <ImageView
                    android:background="@color/white"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:src="@mipmap/seach"
                    tools:ignore="ContentDescription" />
            </LinearLayout>


            <ImageView
                android:padding="20dp"
                android:src="@mipmap/more_select"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                />

        </LinearLayout>

        <LinearLayout
            android:alpha="1"
            android:background="@drawable/linshap"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@mipmap/add_customers"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    />
                <TextView
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_customers"
                    />

            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@mipmap/write"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    />
                <TextView
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Write"
                    />

            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@mipmap/buildingtask"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    />
                <TextView
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buildingtask"
                    />

            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@mipmap/writeorder"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    />
                <TextView
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/writeorder"
                    />

            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@mipmap/writerjournal"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    />
                <TextView
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/writerjournal"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/home_Rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>


</LinearLayout>
